# Project-File-Transfer-Remade

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/fs/: fs.rs
src-tauri/src/http/: server.rs
src-tauri/src/utils/: mod.rs  os.rs
src/utils/: server.ts
