[package]
name = "wifi-file-transfer-remade"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-request", "path-all", "shell-open", "fs-read-dir"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rocket = "0.5.0"
local-ip-address = "0.6.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
